--- a/task_v1.html
+++ b/task_v1.html
@@ -16,9 +16,9 @@
 
     .days-of-week {
       display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      grid-template-rows: 1fr;
-      height: 100vh; /* Stretch to the height of the page */
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      height: 100vh;
     }
 
     .day {
@@ -81,8 +81,7 @@
         <div class="day">Wednesday</div>
         <div class="day">Thursday</div>
         <div class="day">Friday</div>
-        <div class="day">Saturday</div>
-        <div class="day">Sunday</div>
+        <div class="day">Saturday / Sunday</div>
       </div>
     </div>
   </div>
