--- a/task_v1.html
+++ b/task_v1.html
@@ -23,7 +23,8 @@
 
     .day {
       display: flex;
-      justify-content: center;
+      flex-direction: column; /* Added to stack text in a column */
+      justify-content: flex-start;
       align-items: center;
       border: 2px solid black;
       font-size: 1.5em;
