--- a/task_v1.html
+++ b/task_v1.html
@@ -72,15 +72,15 @@
       <article class="weekly-plan">
         <div class="section-block">
           <h2 class="section-title">Top 3 Goals</h2>
-          <textarea class="text-input" rows="3" type="string"></textarea>
+          <input class="text-input" type="text">
         </div>
         <div class="middle-block">
           <h2 class="section-title">Everything Else</h2>
-          <textarea class="text-input" rows="11" type="string"></textarea>
+          <input class="text-input" type="text">
         </div>
         <div class="bottom-block">
           <h2 class="section-title">Next Week</h2>
-          <textarea class="text-input" rows="3" type="string"></textarea>
+          <input class="text-input" type="text">
         </div>
       </article>
     </div>
