--- a/task_v1.html
+++ b/task_v1.html
@@ -28,7 +28,7 @@
       align-items: center;
       border: 2px solid black;
       font-size: 1.5em;
-      padding: 5px; /* Added padding for better visual appearance */
+      padding: 5px;
     }
 
     article {
@@ -48,7 +48,7 @@
 
     .section-title {
       font-size: 1.2em;
-      margin-bottom: 5px; /* Added margin for better visual appearance */
+      margin-bottom: 5px;
     }
 
     section {
@@ -57,7 +57,7 @@
       align-items: center;
       border: 2px solid black;
       font-size: 1.5em;
-      padding: 5px; /* Added padding for better visual appearance */
+      padding: 5px;
     }
   </style>
 </head>
@@ -81,12 +81,14 @@
     </div>
     <div class="right">
       <div class="days-of-week">
-        <div class="day">Monday</div>
-        <div class="day">Tuesday</div>
-        <div class="day">Wednesday</div>
-        <div class="day">Thursday</div>
-        <div class="day">Friday</div>
-        <div class="day">Saturday / Sunday</div>
+        <div class="day">
+          <div>Monday</div>
+          <div>Tuesday</div>
+          <div>Wednesday</div>
+          <div>Thursday</div>
+          <div>Friday</div>
+          <div>Saturday / Sunday</div>
+        </div>
       </div>
     </div>
   </div>
