--- a/task_v1.html
+++ b/task_v1.html
@@ -28,13 +28,12 @@
       align-items: center;
       border: 2px solid black;
       font-size: 1.5em;
-      padding: 5px;
+      padding: 5px; /* Added padding for better visual appearance */
     }
 
     article {
       display: grid;
-      grid-template-rows: 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: repeat(3, 1fr); /* Adjusted grid template rows */
       grid-gap: 3px;
       height: 50vh;
     }
@@ -48,7 +47,7 @@
 
     .section-title {
       font-size: 1.2em;
-      margin-bottom: 5px;
+      margin-bottom: 5px; /* Added margin for better visual appearance */
     }
 
     section {
@@ -57,7 +56,7 @@
       align-items: center;
       border: 2px solid black;
       font-size: 1.5em;
-      padding: 5px;
+      padding: 5px; /* Added padding for better visual appearance */
     }
   </style>
 </head>
@@ -68,27 +67,19 @@
     </div>
     <div class="left">
       <article class="weekly-plan">
-        <div class="section-block">
-          <section class="section-title">Top 3 Goals</section>
-        </div>
-        <div class="middle-block">
-          <section class="section-title">Everything Else</section>
-        </div>
-        <div class="bottom-block">
-          <section class="section-title">Next Week</section>
-        </div>
+        <section class="section-title">Top 3 Goals</section>
+        <section class="section-title">Everything Else</section>
+        <section class="section-title">Next Week</section>
       </article>
     </div>
     <div class="right">
       <div class="days-of-week">
-        <div class="day">
-          <div>Monday</div>
-          <div>Tuesday</div>
-          <div>Wednesday</div>
-          <div>Thursday</div>
-          <div>Friday</div>
-          <div>Saturday / Sunday</div>
-        </div>
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+        <div class="day">Friday</div>
+        <div class="day">Saturday / Sunday</div>
       </div>
     </div>
   </div>
