--- a/task_v1.html
+++ b/task_v1.html
@@ -28,12 +28,12 @@
       align-items: center;
       border: 2px solid black;
       font-size: 1.5em;
-      padding: 5px; /* Added padding for better visual appearance */
+      padding: 5px;
     }
 
     article {
       display: grid;
-      grid-template-rows: repeat(3, 1fr); /* Adjusted grid template rows */
+      grid-template-rows: repeat(3, 1fr);
       grid-gap: 3px;
       height: 50vh;
     }
@@ -47,16 +47,15 @@
 
     .section-title {
       font-size: 1.2em;
-      margin-bottom: 5px; /* Added margin for better visual appearance */
+      margin-bottom: 5px;
     }
 
-    section {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 2px solid black;
-      font-size: 1.5em;
-      padding: 5px; /* Added padding for better visual appearance */
+    .text-input {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 5px;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -68,8 +67,11 @@
     <div class="left">
       <article class="weekly-plan">
         <section class="section-title">Top 3 Goals</section>
+        <textarea class="text-input" rows="3" type="text"></textarea>
         <section class="section-title">Everything Else</section>
+        <textarea class="text-input" rows="11" type="text"></textarea>
         <section class="section-title">Next Week</section>
+        <textarea class="text-input" rows="3" type="text"></textarea>
       </article>
     </div>
     <div class="right">
