--- a/task_v1.html
+++ b/task_v1.html
@@ -33,7 +33,7 @@
 
     article {
       display: grid;
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-rows: 3fr 11fr 3fr;
       grid-gap: 3px;
       height: 50vh;
     }
@@ -52,7 +52,6 @@
 
     .text-input {
       width: 100%;
-      height: 100%;
       margin: 0;
       padding: 5px;
       box-sizing: border-box;
@@ -66,12 +65,18 @@
     </div>
     <div class="left">
       <article class="weekly-plan">
-        <section class="section-title">Top 3 Goals</section>
-        <textarea class="text-input" rows="3" type="text"></textarea>
-        <section class="section-title">Everything Else</section>
-        <textarea class="text-input" rows="11" type="text"></textarea>
-        <section class="section-title">Next Week</section>
-        <textarea class="text-input" rows="3" type="text"></textarea>
+        <section>
+          <h2 class="section-title">Top 3 Goals</h2>
+          <textarea class="text-input" rows="3" type="text"></textarea>
+        </section>
+        <section>
+          <h2 class="section-title">Everything Else</h2>
+          <textarea class="text-input" rows="11" type="text"></textarea>
+        </section>
+        <section>
+          <h2 class="section-title">Next Week</h2>
+          <textarea class="text-input" rows="3" type="text"></textarea>
+        </section>
       </article>
     </div>
     <div class="right">
