--- a/task_v1.html
+++ b/task_v1.html
@@ -33,7 +33,7 @@
 
     article {
       display: grid;
-      grid-template-rows: 3fr 11fr 3fr;
+      grid-template-rows: repeat(3, 1fr);
       grid-gap: 3px;
       height: 50vh;
     }
@@ -67,15 +67,30 @@
       <article class="weekly-plan">
         <section>
           <h2 class="section-title">Top 3 Goals</h2>
-          <textarea class="text-input" rows="3" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
         </section>
         <section>
           <h2 class="section-title">Everything Else</h2>
-          <textarea class="text-input" rows="11" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <!-- Repeat for additional lines -->
         </section>
         <section>
           <h2 class="section-title">Next Week</h2>
-          <textarea class="text-input" rows="3" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
         </section>
       </article>
     </div>
