--- a/task_v1.html
+++ b/task_v1.html
@@ -14,6 +14,17 @@
       padding: 0;
     }
 
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px;
+    }
+
+    .header-title {
+      font-size: 4em; /* Increased font size by 2 times */
+    }
+
     .days-of-week {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -75,14 +86,6 @@
         </section>
         <section>
           <h2 class="section-title">Everything Else</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
           <textarea class="text-input" rows="1" type="text"></textarea>
           <textarea class="text-input" rows="1" type="text"></textarea>
           <textarea class="text-input" rows="1" type="text"></textarea>
