--- a/task_v1.html
+++ b/task_v1.html
@@ -16,40 +16,21 @@
 
     .container {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px;
+      align-items: stretch;
     }
 
-    .header-title {
-      font-size: 4em; /* Increased font size by 2 times */
+    .header {
+      flex: 0 0 auto; /* Added to prevent the header from stretching */
     }
 
-    .days-of-week {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      height: 100vh;
-    }
-
-    .day {
+    .left {
+      flex: 1; /* Allow the left section to take available space */
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      border: 2px solid black;
-      font-size: 1.5em;
-      padding: 5px;
+      padding: 10px; /* Added padding for spacing */
     }
 
-    article {
-      display: grid;
-      grid-template-rows: repeat(3, 1fr);
-      grid-gap: 3px;
-      height: 50vh;
-    }
-
-    .weekly-plan {
+    .article-container {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -69,6 +50,23 @@
       border: none; /* Removed default border */
       border-bottom: 1px solid #000; /* Added bottom border */
     }
+
+    .days-of-week {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      height: 100vh;
+    }
+
+    .day {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      border: 2px solid black;
+      font-size: 1.5em;
+      padding: 5px;
+    }
   </style>
 </head>
 <body>
@@ -77,27 +75,29 @@
       <h1 class="header-title">PLAN WEEKLY</h1>
     </div>
     <div class="left">
-      <article class="weekly-plan">
-        <section>
-          <h2 class="section-title">Top 3 Goals</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-        </section>
-        <section>
-          <h2 class="section-title">Everything Else</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <!-- Repeat for additional lines -->
-        </section>
-        <section>
-          <h2 class="section-title">Next Week</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-        </section>
-      </article>
+      <div class="article-container">
+        <article class="weekly-plan">
+          <section>
+            <h2 class="section-title">Top 3 Goals</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+          </section>
+          <section>
+            <h2 class="section-title">Everything Else</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <!-- Repeat for additional lines -->
+          </section>
+          <section>
+            <h2 class="section-title">Next Week</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+          </section>
+        </article>
+      </div>
     </div>
     <div class="right">
       <div class="days-of-week">
