--- a/task_v1.html
+++ b/task_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-edges">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles_v4.css">
+  <link rel="stylesheet" href="styles_v2.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=YourCustomFont" rel="stylesheet">
   <style>
@@ -20,24 +20,17 @@
     }
 
     .header {
-      flex: 0 0 auto; /* Added to prevent the header from stretching */
+      flex: 0 0 auto;
     }
 
     .left {
-      flex: 1; /* Allow the left section to take available space */
+      flex: 1;
       display: flex;
       flex-direction: column;
-      padding: 10px; /* Added padding for spacing */
+      padding: 10px;
     }
 
-    article {
-      display: grid;
-      grid-template-rows: repeat(3, 1fr);
-      grid-gap: 3px;
-      height: 50vh;
-    }
-
-    .weekly-plan {
+    .article-container {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -50,12 +43,29 @@
     }
 
     .text-input {
-      width: calc(100% - 10px); /* Adjusted width to accommodate borders */
+      width: calc(100% - 10px);
       margin: 0;
       padding: 5px;
       box-sizing: border-box;
-      border: none; /* Removed default border */
-      border-bottom: 1px solid #000; /* Added bottom border */
+      border: none;
+      border-bottom: 1px solid #000;
+    }
+
+    .days-of-week {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      height: 100vh;
+    }
+
+    .day {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      border: 2px solid black;
+      font-size: 1.5em;
+      padding: 5px;
     }
   </style>
 </head>
@@ -65,35 +75,37 @@
       <h1 class="header-title">PLAN WEEKLY</h1>
     </div>
     <div class="left">
-      <article class="weekly-plan">
-        <section>
-          <h2 class="section-title">Top 3 Goals</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-        </section>
-        <section>
-          <h2 class="section-title">Everything Else</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <!-- Repeat for additional lines -->
-        </section>
-        <section>
-          <h2 class="section-title">Next Week</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-        </section>
-      </article>
+      <div class="article-container">
+        <article class="weekly-plan">
+          <section>
+            <h2 class="section-title">Top 3 Goals</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+          </section>
+          <section>
+            <h2 class="section-title">Everything Else</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <!-- Repeat for additional lines -->
+          </section>
+          <section>
+            <h2 class="section-title">Next Week</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+          </section>
+        </article>
+      </div>
     </div>
     <div class="right">
       <div class="days-of-week">
