--- a/task_v1.html
+++ b/task_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-edges">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles_v4.css">
+  <link rel="stylesheet" href="styles_v2.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=YourCustomFont" rel="stylesheet">
   <style>
@@ -21,6 +21,7 @@
 
     .header {
       flex: 0 0 auto;
+      padding: 10px;
     }
 
     .left {
@@ -67,37 +68,44 @@
       font-size: 1.5em;
       padding: 5px;
     }
-
-    .weekly-plan {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100%;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1 class="header-title">PLAN WEEKLY</h1>
+      <h1 class="header-title">Week Of</h1>
+      <h1 class="header-title">Healthy Habit</h1>
+      <h1 class="header-title">Room for Improvement</h1>
+      <h1 class="header-title">Rocked It</h1>
     </div>
     <div class="left">
       <div class="article-container">
         <article class="weekly-plan">
           <section>
-            <h2 class="section-title">Week Of</h2>
+            <h2 class="section-title">Top 3 Goals</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
           <section>
-            <h2 class="section-title">Healthy Habit</h2>
+            <h2 class="section-title">Everything Else</h2>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <!-- Repeat for additional lines -->
           </section>
           <section>
-            <h2 class="section-title">Room for Improvement</h2>
+            <h2 class="section-title">Next Week</h2>
             <textarea class="text-input" rows="1" type="text"></textarea>
-          </section>
-          <section>
-            <h2 class="section-title">Rocked It</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
         </article>
