--- a/task_v1.html
+++ b/task_v1.html
@@ -15,17 +15,24 @@
     }
 
     .container {
-      display: flex;
-      align-items: stretch;
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-gap: 10px;
     }
 
     .header {
-      flex: 0 0 auto;
+      grid-column: span 2;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
       padding: 10px;
     }
 
+    .header-title {
+      margin: 0;
+    }
+
     .left {
-      flex: 1;
       display: flex;
       flex-direction: column;
       padding: 10px;
@@ -73,10 +80,10 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1 class="header-title">Week Of</h1>
-      <h1 class="header-title">Healthy Habit</h1>
-      <h1 class="header-title">Room for Improvement</h1>
-      <h1 class="header-title">Rocked It</h1>
+      <h1 class="header-title">PLAN WEEKLY</h1>
+      <h1 class="header-title">Top 3 Goals</h1>
+      <h1 class="header-title">Everything Else</h1>
+      <h1 class="header-title">Next Week</h1>
     </div>
     <div class="left">
       <div class="article-container">
