--- a/task_v1.html
+++ b/task_v1.html
@@ -28,7 +28,7 @@
       padding: 10px;
     }
 
-    .header-title {
+    .header h1 {
       margin: 0;
     }
 
@@ -80,10 +80,10 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1 class="header-title">PLAN WEEKLY</h1>
-      <h1 class="header-title">Top 3 Goals</h1>
-      <h1 class="header-title">Everything Else</h1>
-      <h1 class="header-title">Next Week</h1>
+      <h1>PLAN WEEKLY</h1>
+      <h1>Top 3 Goals</h1>
+      <h1>Everything Else</h1>
+      <h1>Next Week</h1>
     </div>
     <div class="left">
       <div class="article-container">
