--- a/task_v1.html
+++ b/task_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-edges">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles_v4.css">
+  <link rel="stylesheet" href="styles_v2.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=YourCustomFont" rel="stylesheet">
   <style>
@@ -28,7 +28,7 @@
       padding: 10px;
     }
 
-    .header h1 {
+    .header h1, .header h2 {
       margin: 0;
     }
 
@@ -81,9 +81,9 @@
   <div class="container">
     <div class="header">
       <h1>PLAN WEEKLY</h1>
-      <h1>Top 3 Goals</h1>
-      <h1>Everything Else</h1>
-      <h1>Next Week</h1>
+      <h2>Top 3 Goals</h2>
+      <h2>Everything Else</h2>
+      <h2>Next Week</h2>
     </div>
     <div class="left">
       <div class="article-container">
