--- a/task_v1.html
+++ b/task_v1.html
@@ -17,7 +17,7 @@
     }
 
     .container {
-      height: 100%;
+      height: 100vh;
     }
 
     .header {
@@ -42,7 +42,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 100%;
+      height: calc(100% - 40px);
     }
 
     .section-title {
@@ -75,15 +75,23 @@
       font-size: 1.5em;
       padding: 5px;
     }
+
+    .weekly-plan {
+      display: grid;
+      grid-template-rows: repeat(4, 1fr);
+      grid-gap: 3px;
+    }
+
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
       <h1>PLAN WEEKLY</h1>
-      <h2>Top 3 Goals</h2>
-      <h2>Everything Else</h2>
-      <h2>Next Week</h2>
+      <h2>Week Of</h2>
+      <h2>Healthy Habit</h2>
+      <h2>Room for Improvement</h2>
+      <h2>Rocked It</h2>
     </div>
     <div class="left">
       <div class="article-container">
